--- a/ask/qa/templates/question.html
+++ b/ask/qa/templates/question.html
@@ -2,4 +2,8 @@
 {% block content %}
     <h1>{{ question.title }}</h1>
     <p>{{ question.text }}</p>
+    {% for answer in answers %}
+        <p>{{ answer.text }}</p>
+    {% endfor %}
+
 {% endblock content %}
