added form for adding answers

--- a/ask/qa/templates/question.html
+++ b/ask/qa/templates/question.html
@@ -2,6 +2,12 @@
 {% block content %}
     <h1>{{ question.title }}</h1>
     <p>{{ question.text }}</p>
+    Оставить комментарий:
+    <form method="post" action="/answer/">
+        {{ form.as_ul }}
+        {% csrf_token %}
+        <input type="submit" value="Ответить">
+    </form>
     {% for answer in answers %}
         <p>{{ answer.text }}</p>
     {% endfor %}
