--- a/ask/qa/templates/question.html
+++ b/ask/qa/templates/question.html
@@ -3,7 +3,7 @@
     <h1>{{ question.title }}</h1>
     <p>{{ question.text }}</p>
     Оставить комментарий:
-    <form method="post" action="{% url "one_question" question.id %}">
+    <form method="post" action="/answer/">
         {{ form.as_ul }}
         {% csrf_token %}
         <input type="submit" value="Ответить">
