--- a/ask/qa/templates/question.html
+++ b/ask/qa/templates/question.html
@@ -2,14 +2,17 @@
 {% block content %}
     <h1>{{ question.title }}</h1>
     <p>{{ question.text }}</p>
+    <h4>{{ question.author }}</h4>
+    {% if user.is_authenticated %}
     Оставить комментарий:
     <form method="post" action="/answer/">
         {{ form.as_ul }}
         {% csrf_token %}
         <input type="submit" value="Ответить">
     </form>
-    {% for answer in answers %}
+    {% endif %}
+        {% for answer in answers %}
+        <h4>{{ answer.author }}</h4>
         <p>{{ answer.text }}</p>
     {% endfor %}
-
 {% endblock content %}
